// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`product characteristics should be an empty array if wrong id is requested 1`] = `Array []`;

exports[`product characteristics should match snapshot 1`] = `
Array [
  Object {
    "groupTitle": "",
    "group_id": 0,
    "group_order": 99999999,
    "options": Array [
      Object {
        "category_id": 4626923,
        "comparable": "main",
        "id": 147152,
        "in_short": 0,
        "name": "upakovka147152",
        "order": 3,
        "status": "active",
        "title": "Упаковка",
        "type": "List",
        "values": Array [
          Object {
            "href": "/voda/c4639872/upakovka147152=plastikovaya/",
            "title": "Пластиковая бутылка",
          },
        ],
      },
      Object {
        "category_id": 4625018,
        "comparable": "main",
        "id": 168958,
        "in_short": 0,
        "name": "stepen-gazirovaniya",
        "order": 21,
        "status": "active",
        "title": "Степень газирования",
        "type": "ComboBox",
        "values": Array [
          Object {
            "href": "/voda/c4639872/stepen-gazirovaniya=bez-gaza/",
            "title": "Без газа",
          },
        ],
      },
      Object {
        "category_id": 4633001,
        "comparable": "main",
        "id": 71581,
        "in_short": 0,
        "name": "objom-71581",
        "order": 24,
        "status": "active",
        "title": "Объем",
        "type": "ComboBox",
        "values": Array [
          Object {
            "href": "/voda/c4639872/objom-71581=0-5-0-99-l/",
            "title": "0.5 л",
          },
        ],
      },
      Object {
        "category_id": 4639872,
        "comparable": "main",
        "id": 168950,
        "in_short": 0,
        "name": "tip168950",
        "order": 27,
        "status": "active",
        "title": "Тип",
        "type": "List",
        "values": Array [
          Object {
            "href": "/voda/c4639872/tip168950=mineralnaya/",
            "title": "Минеральная",
          },
        ],
      },
      Object {
        "category_id": 0,
        "comparable": "main",
        "id": 98900,
        "in_short": 0,
        "name": "strana-proizvoditelj-tovara-90098",
        "order": 50,
        "status": "active",
        "title": "Страна-производитель",
        "type": "ListValues",
        "values": Array [
          Object {
            "href": "/voda/c4639872/strana-proizvoditelj-tovara-90098=619938/",
            "title": "Франция",
          },
        ],
      },
      Object {
        "category_id": 0,
        "comparable": "main",
        "id": 92802,
        "in_short": 0,
        "name": "kolichestvo-predmetov-92802",
        "order": 60,
        "status": "active",
        "title": "Количество в упаковке, шт",
        "type": "ComboBox",
        "values": Array [
          Object {
            "href": "/voda/c4639872/kolichestvo-predmetov-92802=475541/",
            "title": "6",
          },
        ],
      },
      Object {
        "category_id": 4624997,
        "comparable": "disable",
        "id": 71434,
        "in_short": 0,
        "name": "srok-godnosti-71434",
        "order": 65,
        "status": "active",
        "title": "Срок хранения",
        "type": "TextInput",
        "values": Array [
          Object {
            "href": null,
            "title": "2 года",
          },
        ],
      },
    ],
  },
]
`;

exports[`product description of wrong id should match snapshot 1`] = `
Object {
  "html": null,
  "isRichNoLimit": false,
  "rich": null,
  "text": null,
}
`;

exports[`product description should match snapshot 1`] = `
Object {
  "html": null,
  "isRichNoLimit": false,
  "rich": null,
  "text": "<p> <p><b>Evian</b> – это cамая известная в мире минеральная вода. Она добывается на северном склоне французских Альп, в районе далеком от городов и промышленного производства. </p><p>В течение своего долгого 15-летнего пути <b>Evian</b> проходит природный фильтр из горных пород, обогащаясь естественными минеральными веществами. Благодаря этому, <b>Evian</b> приобретает кристальную чистоту и естественный уникально сбалансированный минеральный состав.</p><p><b><i>В упаковке 24 бутылки!</i></b></p>",
}
`;

exports[`product details should match snapshot 1`] = `
Array [
  Object {
    "brand": "Evian",
    "brand_id": 18534,
    "category_id": 4639872,
    "comments_amount": 4,
    "comments_mark": 5,
    "config": Object {
      "bonus": true,
      "brand": false,
      "buy_button": true,
      "compare_button": true,
      "description": true,
      "gift": true,
      "image": true,
      "old_price": true,
      "pictograms": true,
      "price": true,
      "promo_price": true,
      "rating": true,
      "status": true,
      "tags": true,
      "title": true,
      "variables": true,
      "wishlist_button": true,
    },
    "discount": 0,
    "dispatch": 1,
    "docket": toBeOneOf<Any,>,
    "gift": toBeOneOf<true,false,>,
    "group_id": 0,
    "group_name": null,
    "group_title": null,
    "groups": Array [],
    "href": "https://rozetka.com.ua/evian_3068320055022/p6802844/",
    "id": 6802844,
    "image_main": "https://content1.rozetka.com.ua/goods/images/big_tile/10709078.jpg",
    "images": Object {
      "all_images": Array [
        "https://content1.rozetka.com.ua/goods/images/original/10709078.jpg",
      ],
      "hover": "https://content1.rozetka.com.ua/goods/images/big_tile/10709078.jpg",
      "main": "https://content1.rozetka.com.ua/goods/images/big_tile/10709078.jpg",
      "preview": "https://content1.rozetka.com.ua/goods/images/preview/10709078.jpg",
    },
    "is_docket": false,
    "is_group_primary": 0,
    "is_need_street_id": false,
    "merchant_id": 1,
    "mpath": ".4626923.4624997.4633001.4625018.4639872.",
    "old_price": 241,
    "parent_category_id": 4626923,
    "pictograms": null,
    "pl_bonus_charge_pcs": 0,
    "pl_use_instant_bonus": 0,
    "premium": 0,
    "preorder": 0,
    "price": 241,
    "price_pcs": "8.8",
    "primary_good_title": null,
    "sell_status": "available",
    "seller_id": 5,
    "stars": "100%",
    "state": "new",
    "status": "active",
    "status_inherited": "active",
    "tag": null,
    "title": "Упаковка минеральной негазированной воды Evian 0.5 л х 6 бутылок (3068320055008_3068320055022)",
    "title_mode": null,
    "title_suffix": "",
    "use_group_links": null,
  },
]
`;

exports[`product multiple prices should match snapshot 1`] = `
Array [
  Object {
    "has_shops": false,
    "info": null,
    "max_price": 0,
    "min_price": 0,
    "old_price": Any<Number>,
    "old_price_formatted": Any<String>,
    "old_usd_price": Any<String>,
    "pl_charge_pcs": 0,
    "pl_premium_bonus_charge_pcs": Any<Number>,
    "pl_use_instant_bonus": false,
    "price": Any<Number>,
    "price_formatted": Any<String>,
    "rests": -1,
    "sell_status": "available",
    "show_in_site": null,
    "status": "active",
    "usd_price": Any<String>,
  },
  Object {
    "has_shops": false,
    "info": null,
    "max_price": 0,
    "min_price": 0,
    "old_price": Any<Number>,
    "old_price_formatted": Any<String>,
    "old_usd_price": Any<String>,
    "pl_charge_pcs": 0,
    "pl_premium_bonus_charge_pcs": Any<Number>,
    "pl_use_instant_bonus": false,
    "price": Any<Number>,
    "price_formatted": Any<String>,
    "rests": -1,
    "sell_status": "available",
    "show_in_site": null,
    "status": "active",
    "usd_price": Any<String>,
  },
]
`;

exports[`product price should match snapshot 1`] = `
Array [
  Object {
    "has_shops": false,
    "info": null,
    "max_price": 0,
    "min_price": 0,
    "old_price": 241,
    "old_price_formatted": "241",
    "old_usd_price": "8.80",
    "pl_charge_pcs": 0,
    "pl_premium_bonus_charge_pcs": 2,
    "pl_use_instant_bonus": false,
    "price": 241,
    "price_formatted": "241",
    "rests": -1,
    "sell_status": "available",
    "show_in_site": null,
    "status": "active",
    "usd_price": "8.80",
  },
]
`;

exports[`product relatedProducts should match snapshot 1`] = `
Array [
  Object {
    "brand": Object {
      "id": 121957,
      "logo": null,
      "name": "vittel",
      "title": "Vittel",
    },
    "category": Object {
      "href": "https://rozetka.com.ua/voda/c4639872/",
      "id": 4639872,
      "root_id": 4624997,
      "title": "Вода",
      "use_group_links": false,
    },
    "comments": Object {
      "amount": 0,
      "mark": 0,
    },
    "docket": "",
    "group": Object {
      "href": null,
      "id": 0,
      "is_group_primary": 0,
    },
    "href": "https://rozetka.com.ua/vittel_3311/p8042177/",
    "id": 8042177,
    "images": Array [
      Object {
        "big_tile": "https://content.rozetka.com.ua/goods/images/big_tile/225203525.jpg",
        "original": "https://content.rozetka.com.ua/goods/images/original/225203525.jpg",
        "preview": "https://content.rozetka.com.ua/goods/images/preview/225203525.jpg",
      },
    ],
    "loyalty": Object {
      "pl_bonus_charge_pcs": 0,
      "pl_use_instant_bonus": 0,
    },
    "merchant_id": 1,
    "mpath": ".4626923.4624997.4633001.4625018.4639872.",
    "premium_program": false,
    "price": Object {
      "current": 199,
      "old": 243,
      "pcs": "7.26",
    },
    "sell_status": "available",
    "seller_id": 5,
    "sla_id": 8124,
    "state": "new",
    "status": "active",
    "status_inherited": "active",
    "tag": null,
    "title": "Упаковка минеральной негазированной воды Vittel Sport 0.75 л х 6 бутылок (3179732338648_3179730116224)",
  },
  Object {
    "brand": Object {
      "id": 18534,
      "logo": null,
      "name": "evian",
      "title": "Evian",
    },
    "category": Object {
      "href": "https://rozetka.com.ua/voda/c4639872/",
      "id": 4639872,
      "root_id": 4624997,
      "title": "Вода",
      "use_group_links": false,
    },
    "comments": Object {
      "amount": 0,
      "mark": 0,
    },
    "docket": "",
    "group": Object {
      "href": null,
      "id": 0,
      "is_group_primary": 0,
    },
    "href": "https://rozetka.com.ua/evian_3068320063010/p195582535/",
    "id": 195582535,
    "images": Array [
      Object {
        "big_tile": "https://content2.rozetka.com.ua/goods/images/big_tile/22628281.jpg",
        "original": "https://content2.rozetka.com.ua/goods/images/original/22628281.jpg",
        "preview": "https://content2.rozetka.com.ua/goods/images/preview/22628281.jpg",
      },
      Object {
        "big_tile": "https://content.rozetka.com.ua/goods/images/big_tile/22628244.jpg",
        "original": "https://content.rozetka.com.ua/goods/images/original/22628244.jpg",
        "preview": "https://content.rozetka.com.ua/goods/images/preview/22628244.jpg",
      },
    ],
    "loyalty": Object {
      "pl_bonus_charge_pcs": 0,
      "pl_use_instant_bonus": 0,
    },
    "merchant_id": 1,
    "mpath": ".4626923.4624997.4633001.4625018.4639872.",
    "premium_program": false,
    "price": Object {
      "current": 597,
      "old": 660,
      "pcs": "21.79",
    },
    "sell_status": "available",
    "seller_id": 5,
    "sla_id": 8124,
    "state": "new",
    "status": "active",
    "status_inherited": "active",
    "tag": null,
    "title": "Упаковка минеральной негазированной воды Evian 0.33 л х 24 бутылки (3068320063010)",
  },
  Object {
    "brand": Object {
      "id": 18534,
      "logo": null,
      "name": "evian",
      "title": "Evian",
    },
    "category": Object {
      "href": "https://rozetka.com.ua/voda/c4639872/",
      "id": 4639872,
      "root_id": 4624997,
      "title": "Вода",
      "use_group_links": false,
    },
    "comments": Object {
      "amount": 0,
      "mark": 0,
    },
    "docket": "",
    "group": Object {
      "href": null,
      "id": 0,
      "is_group_primary": 0,
    },
    "href": "https://rozetka.com.ua/evian_3068320014067/p6805929/",
    "id": 6805929,
    "images": Array [
      Object {
        "big_tile": "https://content.rozetka.com.ua/goods/images/big_tile/10709100.jpg",
        "original": "https://content.rozetka.com.ua/goods/images/original/10709100.jpg",
        "preview": "https://content.rozetka.com.ua/goods/images/preview/10709100.jpg",
      },
      Object {
        "big_tile": "https://content2.rozetka.com.ua/goods/images/big_tile/10709095.jpg",
        "original": "https://content2.rozetka.com.ua/goods/images/original/10709095.jpg",
        "preview": "https://content2.rozetka.com.ua/goods/images/preview/10709095.jpg",
      },
    ],
    "loyalty": Object {
      "pl_bonus_charge_pcs": 0,
      "pl_use_instant_bonus": 0,
    },
    "merchant_id": 1,
    "mpath": ".4626923.4624997.4633001.4625018.4639872.",
    "premium_program": false,
    "price": Object {
      "current": 321,
      "old": 383,
      "pcs": "11.72",
    },
    "sell_status": "available",
    "seller_id": 5,
    "sla_id": 8124,
    "state": "new",
    "status": "active",
    "status_inherited": "active",
    "tag": null,
    "title": "Упаковка минеральной негазированной воды Evian Sport 0.75 л х 6 бутылок (3068320014067_3068320105314)",
  },
  Object {
    "brand": Object {
      "id": 121950,
      "logo": null,
      "name": "perrier",
      "title": "Perrier",
    },
    "category": Object {
      "href": "https://rozetka.com.ua/voda/c4639872/",
      "id": 4639872,
      "root_id": 4624997,
      "title": "Вода",
      "use_group_links": false,
    },
    "comments": Object {
      "amount": 0,
      "mark": 0,
    },
    "docket": "",
    "group": Object {
      "href": null,
      "id": 0,
      "is_group_primary": 0,
    },
    "href": "https://rozetka.com.ua/perrier-7613036669412/p313072198/",
    "id": 313072198,
    "images": Array [
      Object {
        "big_tile": "https://content1.rozetka.com.ua/goods/images/big_tile/199362803.jpg",
        "original": "https://content1.rozetka.com.ua/goods/images/original/199362803.jpg",
        "preview": "https://content1.rozetka.com.ua/goods/images/preview/199362803.jpg",
      },
      Object {
        "big_tile": "https://content.rozetka.com.ua/goods/images/big_tile/199362838.jpg",
        "original": "https://content.rozetka.com.ua/goods/images/original/199362838.jpg",
        "preview": "https://content.rozetka.com.ua/goods/images/preview/199362838.jpg",
      },
    ],
    "loyalty": Object {
      "pl_bonus_charge_pcs": 0,
      "pl_use_instant_bonus": 0,
    },
    "merchant_id": 1,
    "mpath": ".4626923.4624997.4633001.4625018.4639872.",
    "premium_program": false,
    "price": Object {
      "current": 199,
      "old": 333,
      "pcs": "7.26",
    },
    "sell_status": "available",
    "seller_id": 5,
    "sla_id": 8124,
    "state": "new",
    "status": "active",
    "status_inherited": "active",
    "tag": null,
    "title": "Упаковка минеральной воды Perrier Lime 0.25 л х 10 шт (7613036669412)",
  },
  Object {
    "brand": Object {
      "id": 133613,
      "logo": null,
      "name": "rocchetta",
      "title": "Rocchetta",
    },
    "category": Object {
      "href": "https://rozetka.com.ua/voda/c4639872/",
      "id": 4639872,
      "root_id": 4624997,
      "title": "Вода",
      "use_group_links": false,
    },
    "comments": Object {
      "amount": 0,
      "mark": 0,
    },
    "docket": "",
    "group": Object {
      "href": null,
      "id": 0,
      "is_group_primary": 0,
    },
    "href": "https://rozetka.com.ua/rocchetta_8009245001010/p34114351/",
    "id": 34114351,
    "images": Array [
      Object {
        "big_tile": "https://content2.rozetka.com.ua/goods/images/big_tile/196510015.jpg",
        "original": "https://content2.rozetka.com.ua/goods/images/original/196510015.jpg",
        "preview": "https://content2.rozetka.com.ua/goods/images/preview/196510015.jpg",
      },
      Object {
        "big_tile": "https://content1.rozetka.com.ua/goods/images/big_tile/196510016.jpg",
        "original": "https://content1.rozetka.com.ua/goods/images/original/196510016.jpg",
        "preview": "https://content1.rozetka.com.ua/goods/images/preview/196510016.jpg",
      },
    ],
    "loyalty": Object {
      "pl_bonus_charge_pcs": 0,
      "pl_use_instant_bonus": 0,
    },
    "merchant_id": 1,
    "mpath": ".4626923.4624997.4633001.4625018.4639872.",
    "premium_program": false,
    "price": Object {
      "current": 252,
      "old": 283,
      "pcs": "9.2",
    },
    "sell_status": "available",
    "seller_id": 5,
    "sla_id": 8124,
    "state": "new",
    "status": "active",
    "status_inherited": "active",
    "tag": null,
    "title": "Упаковка минеральной негазированной воды Rocchetta Naturale 1.5 л х 6 бутылок (8009245001010_8009245002000)",
  },
  Object {
    "brand": Object {
      "id": 594003,
      "logo": null,
      "name": "icelandic-glacial",
      "title": "Icelandic Glacial",
    },
    "category": Object {
      "href": "https://rozetka.com.ua/voda/c4639872/",
      "id": 4639872,
      "root_id": 4624997,
      "title": "Вода",
      "use_group_links": false,
    },
    "comments": Object {
      "amount": 0,
      "mark": 0,
    },
    "docket": "",
    "group": Object {
      "href": null,
      "id": 0,
      "is_group_primary": 0,
    },
    "href": "https://rozetka.com.ua/icelandic_glacial_893919001103/p276918248/",
    "id": 276918248,
    "images": Array [
      Object {
        "big_tile": "https://content1.rozetka.com.ua/goods/images/big_tile/196514949.jpg",
        "original": "https://content1.rozetka.com.ua/goods/images/original/196514949.jpg",
        "preview": "https://content1.rozetka.com.ua/goods/images/preview/196514949.jpg",
      },
      Object {
        "big_tile": "https://content1.rozetka.com.ua/goods/images/big_tile/196514950.jpg",
        "original": "https://content1.rozetka.com.ua/goods/images/original/196514950.jpg",
        "preview": "https://content1.rozetka.com.ua/goods/images/preview/196514950.jpg",
      },
    ],
    "loyalty": Object {
      "pl_bonus_charge_pcs": 0,
      "pl_use_instant_bonus": 0,
    },
    "merchant_id": 1,
    "mpath": ".4626923.4624997.4633001.4625018.4639872.",
    "premium_program": false,
    "price": Object {
      "current": 1348,
      "old": 1400,
      "pcs": "49.2",
    },
    "sell_status": "available",
    "seller_id": 5,
    "sla_id": 8124,
    "state": "new",
    "status": "active",
    "status_inherited": "active",
    "tag": null,
    "title": "Упаковка воды питьевой родниковой негазированной Icelandic Glacial 0.5 л x 24 шт (893919001103)",
  },
  Object {
    "brand": Object {
      "id": 472501,
      "logo": null,
      "name": "zaros",
      "title": "ZARO'S",
    },
    "category": Object {
      "href": "https://rozetka.com.ua/voda/c4639872/",
      "id": 4639872,
      "root_id": 4624997,
      "title": "Вода",
      "use_group_links": false,
    },
    "comments": Object {
      "amount": 0,
      "mark": 0,
    },
    "docket": "",
    "group": Object {
      "href": null,
      "id": 0,
      "is_group_primary": 0,
    },
    "href": "https://rozetka.com.ua/zaros-5201101040055/p314068432/",
    "id": 314068432,
    "images": Array [
      Object {
        "big_tile": "https://content1.rozetka.com.ua/goods/images/big_tile/207095109.jpg",
        "original": "https://content1.rozetka.com.ua/goods/images/original/207095109.jpg",
        "preview": "https://content1.rozetka.com.ua/goods/images/preview/207095109.jpg",
      },
      Object {
        "big_tile": "https://content2.rozetka.com.ua/goods/images/big_tile/207095110.jpg",
        "original": "https://content2.rozetka.com.ua/goods/images/original/207095110.jpg",
        "preview": "https://content2.rozetka.com.ua/goods/images/preview/207095110.jpg",
      },
    ],
    "loyalty": Object {
      "pl_bonus_charge_pcs": 0,
      "pl_use_instant_bonus": 0,
    },
    "merchant_id": 1,
    "mpath": ".4626923.4624997.4633001.4625018.4639872.",
    "premium_program": false,
    "price": Object {
      "current": 80,
      "old": 112,
      "pcs": "2.92",
    },
    "sell_status": "available",
    "seller_id": 5,
    "sla_id": 8124,
    "state": "new",
    "status": "active",
    "status_inherited": "active",
    "tag": null,
    "title": "Упаковка воды ZARO'S натуральная минеральная 0.5 л х 6 шт (5201101040055)",
  },
  Object {
    "brand": Object {
      "id": 472501,
      "logo": null,
      "name": "zaros",
      "title": "ZARO'S",
    },
    "category": Object {
      "href": "https://rozetka.com.ua/voda/c4639872/",
      "id": 4639872,
      "root_id": 4624997,
      "title": "Вода",
      "use_group_links": false,
    },
    "comments": Object {
      "amount": 0,
      "mark": 0,
    },
    "docket": "",
    "group": Object {
      "href": null,
      "id": 0,
      "is_group_primary": 0,
    },
    "href": "https://rozetka.com.ua/zaros-5201101111366/p314069542/",
    "id": 314069542,
    "images": Array [
      Object {
        "big_tile": "https://content.rozetka.com.ua/goods/images/big_tile/207099718.jpg",
        "original": "https://content.rozetka.com.ua/goods/images/original/207099718.jpg",
        "preview": "https://content.rozetka.com.ua/goods/images/preview/207099718.jpg",
      },
      Object {
        "big_tile": "https://content.rozetka.com.ua/goods/images/big_tile/207099719.jpg",
        "original": "https://content.rozetka.com.ua/goods/images/original/207099719.jpg",
        "preview": "https://content.rozetka.com.ua/goods/images/preview/207099719.jpg",
      },
    ],
    "loyalty": Object {
      "pl_bonus_charge_pcs": 0,
      "pl_use_instant_bonus": 0,
    },
    "merchant_id": 1,
    "mpath": ".4626923.4624997.4633001.4625018.4639872.",
    "premium_program": false,
    "price": Object {
      "current": 262,
      "old": 320,
      "pcs": "9.56",
    },
    "sell_status": "available",
    "seller_id": 5,
    "sla_id": 8124,
    "state": "new",
    "status": "active",
    "status_inherited": "active",
    "tag": null,
    "title": "Упаковка воды ZARO'S натуральная минеральная 0.33 л х 24 шт (5201101111366)",
  },
  Object {
    "brand": Object {
      "id": 121957,
      "logo": null,
      "name": "vittel",
      "title": "Vittel",
    },
    "category": Object {
      "href": "https://rozetka.com.ua/voda/c4639872/",
      "id": 4639872,
      "root_id": 4624997,
      "title": "Вода",
      "use_group_links": false,
    },
    "comments": Object {
      "amount": 0,
      "mark": 0,
    },
    "docket": "",
    "group": Object {
      "href": null,
      "id": 0,
      "is_group_primary": 0,
    },
    "href": "https://rozetka.com.ua/vittel_3309/p8042149/",
    "id": 8042149,
    "images": Array [
      Object {
        "big_tile": "https://content.rozetka.com.ua/goods/images/big_tile/225203498.jpg",
        "original": "https://content.rozetka.com.ua/goods/images/original/225203498.jpg",
        "preview": "https://content.rozetka.com.ua/goods/images/preview/225203498.jpg",
      },
      Object {
        "big_tile": "https://content.rozetka.com.ua/goods/images/big_tile/225203500.jpg",
        "original": "https://content.rozetka.com.ua/goods/images/original/225203500.jpg",
        "preview": "https://content.rozetka.com.ua/goods/images/preview/225203500.jpg",
      },
    ],
    "loyalty": Object {
      "pl_bonus_charge_pcs": 0,
      "pl_use_instant_bonus": 0,
    },
    "merchant_id": 1,
    "mpath": ".4626923.4624997.4633001.4625018.4639872.",
    "premium_program": false,
    "price": Object {
      "current": 440,
      "old": 657,
      "pcs": "16.06",
    },
    "sell_status": "available",
    "seller_id": 5,
    "sla_id": 8124,
    "state": "new",
    "status": "active",
    "status_inherited": "active",
    "tag": null,
    "title": "Упаковка минеральной негазированной воды Vittel 0.33 л х 24 бутылок (7613033645655_3179732340184)",
  },
  Object {
    "brand": Object {
      "id": 125255,
      "logo": null,
      "name": "borjomi",
      "title": "Borjomi",
    },
    "category": Object {
      "href": "https://rozetka.com.ua/voda/c4639872/",
      "id": 4639872,
      "root_id": 4624997,
      "title": "Вода",
      "use_group_links": false,
    },
    "comments": Object {
      "amount": 0,
      "mark": 0,
    },
    "docket": "",
    "group": Object {
      "href": null,
      "id": 0,
      "is_group_primary": 0,
    },
    "href": "https://rozetka.com.ua/borjomi_4860019001308/p9145560/",
    "id": 9145560,
    "images": Array [
      Object {
        "big_tile": "https://content.rozetka.com.ua/goods/images/big_tile/239512101.jpg",
        "original": "https://content.rozetka.com.ua/goods/images/original/239512101.jpg",
        "preview": "https://content.rozetka.com.ua/goods/images/preview/239512101.jpg",
      },
      Object {
        "big_tile": "https://content2.rozetka.com.ua/goods/images/big_tile/239512100.jpg",
        "original": "https://content2.rozetka.com.ua/goods/images/original/239512100.jpg",
        "preview": "https://content2.rozetka.com.ua/goods/images/preview/239512100.jpg",
      },
      Object {
        "big_tile": "https://content2.rozetka.com.ua/goods/images/big_tile/152093173.jpg",
        "original": "https://content2.rozetka.com.ua/goods/images/original/152093173.jpg",
        "preview": "https://content2.rozetka.com.ua/goods/images/preview/152093173.jpg",
      },
      Object {
        "big_tile": "https://content2.rozetka.com.ua/goods/images/big_tile/232479892.jpg",
        "original": "https://content2.rozetka.com.ua/goods/images/original/232479892.jpg",
        "preview": "https://content2.rozetka.com.ua/goods/images/preview/232479892.jpg",
      },
      Object {
        "big_tile": "https://content2.rozetka.com.ua/goods/images/big_tile/152093175.jpg",
        "original": "https://content2.rozetka.com.ua/goods/images/original/152093175.jpg",
        "preview": "https://content2.rozetka.com.ua/goods/images/preview/152093175.jpg",
      },
      Object {
        "big_tile": "https://content2.rozetka.com.ua/goods/images/big_tile/152093176.jpg",
        "original": "https://content2.rozetka.com.ua/goods/images/original/152093176.jpg",
        "preview": "https://content2.rozetka.com.ua/goods/images/preview/152093176.jpg",
      },
      Object {
        "big_tile": "https://content2.rozetka.com.ua/goods/images/big_tile/152093177.jpg",
        "original": "https://content2.rozetka.com.ua/goods/images/original/152093177.jpg",
        "preview": "https://content2.rozetka.com.ua/goods/images/preview/152093177.jpg",
      },
    ],
    "loyalty": Object {
      "pl_bonus_charge_pcs": 0,
      "pl_use_instant_bonus": 0,
    },
    "merchant_id": 1,
    "mpath": ".4626923.4624997.4633001.4625018.4639872.",
    "premium_program": false,
    "price": Object {
      "current": 299,
      "old": 331,
      "pcs": "10.91",
    },
    "sell_status": "available",
    "seller_id": 5,
    "sla_id": 8124,
    "state": "new",
    "status": "active",
    "status_inherited": "active",
    "tag": Object {
      "name": "low_priority",
      "priority": 6,
      "title": "Низкий приоритет",
    },
    "title": "Упаковка минеральной лечебно-столовой сильногазированной воды Borjomi 0.5 л х 12 бутылок (4860019001308_4860019001346)",
  },
  Object {
    "brand": Object {
      "id": 436363,
      "logo": null,
      "name": "fiji",
      "title": "Fiji",
    },
    "category": Object {
      "href": "https://rozetka.com.ua/voda/c4639872/",
      "id": 4639872,
      "root_id": 4624997,
      "title": "Вода",
      "use_group_links": false,
    },
    "comments": Object {
      "amount": 0,
      "mark": 0,
    },
    "docket": "",
    "group": Object {
      "href": null,
      "id": 0,
      "is_group_primary": 0,
    },
    "href": "https://rozetka.com.ua/fiji_9417574000083/p276918233/",
    "id": 276918233,
    "images": Array [
      Object {
        "big_tile": "https://content.rozetka.com.ua/goods/images/big_tile/161666726.jpg",
        "original": "https://content.rozetka.com.ua/goods/images/original/161666726.jpg",
        "preview": "https://content.rozetka.com.ua/goods/images/preview/161666726.jpg",
      },
      Object {
        "big_tile": "https://content.rozetka.com.ua/goods/images/big_tile/161666727.jpg",
        "original": "https://content.rozetka.com.ua/goods/images/original/161666727.jpg",
        "preview": "https://content.rozetka.com.ua/goods/images/preview/161666727.jpg",
      },
    ],
    "loyalty": Object {
      "pl_bonus_charge_pcs": 0,
      "pl_use_instant_bonus": 0,
    },
    "merchant_id": 1,
    "mpath": ".4626923.4624997.4633001.4625018.4639872.",
    "premium_program": false,
    "price": Object {
      "current": 1325,
      "old": 1399,
      "pcs": "48.36",
    },
    "sell_status": "available",
    "seller_id": 5,
    "sla_id": 8124,
    "state": "new",
    "status": "active",
    "status_inherited": "active",
    "tag": null,
    "title": "Упаковка воды минеральной питьевой негазированной Fiji 0.5 л x 24 шт (9417574000083)",
  },
  Object {
    "brand": Object {
      "id": 472501,
      "logo": null,
      "name": "zaros",
      "title": "ZARO'S",
    },
    "category": Object {
      "href": "https://rozetka.com.ua/voda/c4639872/",
      "id": 4639872,
      "root_id": 4624997,
      "title": "Вода",
      "use_group_links": false,
    },
    "comments": Object {
      "amount": 0,
      "mark": 0,
    },
    "docket": "",
    "group": Object {
      "href": null,
      "id": 0,
      "is_group_primary": 0,
    },
    "href": "https://rozetka.com.ua/zaros-5201101041014/p314067604/",
    "id": 314067604,
    "images": Array [
      Object {
        "big_tile": "https://content2.rozetka.com.ua/goods/images/big_tile/207088044.jpg",
        "original": "https://content2.rozetka.com.ua/goods/images/original/207088044.jpg",
        "preview": "https://content2.rozetka.com.ua/goods/images/preview/207088044.jpg",
      },
      Object {
        "big_tile": "https://content1.rozetka.com.ua/goods/images/big_tile/207088045.jpg",
        "original": "https://content1.rozetka.com.ua/goods/images/original/207088045.jpg",
        "preview": "https://content1.rozetka.com.ua/goods/images/preview/207088045.jpg",
      },
    ],
    "loyalty": Object {
      "pl_bonus_charge_pcs": 0,
      "pl_use_instant_bonus": 0,
    },
    "merchant_id": 1,
    "mpath": ".4626923.4624997.4633001.4625018.4639872.",
    "premium_program": false,
    "price": Object {
      "current": 255,
      "old": 333,
      "pcs": "9.31",
    },
    "sell_status": "available",
    "seller_id": 5,
    "sla_id": 8124,
    "state": "new",
    "status": "active",
    "status_inherited": "active",
    "tag": null,
    "title": "Упаковка воды ZARO'S натуральная минеральная 1 л х 12 шт (5201101041014)",
  },
]
`;

exports[`product tags should match snapshot 1`] = `
Object {
  "announce": null,
  "has_description": 1,
  "icon": Any<String>,
  "icon_mobile": "",
  "id": Any<Number>,
  "is_special_tag": 0,
  "order": Any<Number>,
  "show_in_catalog": Any<Number>,
  "show_in_details": 1,
  "title": Any<String>,
  "view_position": null,
}
`;
